parser.output
Terminals unused in grammar

    TK_FALSO
    TK_VERDADERO


Grammar

    0 $accept: descripcion_algoritmo $end

    1 descripcion_algoritmo: TK_ALGORITMO TK_IDENTIFICADOR TK_COMPOSICION_SECUENCIAL cabecera_algoritmo bloque_algoritmo TK_FALGORITMO

    2 cabecera_algoritmo: definiciones_globales definiciones_acciones_funciones definiciones_variables_interaccion TK_COMENTARIO

    3 bloque_algoritmo: bloque TK_COMENTARIO

    4 definiciones_globales: definicion_tipo definiciones_globales
    5                      | definicion_const definiciones_globales
    6                      | %empty

    7 definiciones_acciones_funciones: definicion_accion definiciones_acciones_funciones
    8                                | definicion_funcion definiciones_acciones_funciones
    9                                | %empty

   10 bloque: declaraciones instrucciones

   11 declaraciones: definicion_tipo declaraciones
   12              | definicion_const declaraciones
   13              | definicion_var declaraciones
   14              | %empty

   15 definicion_tipo: TK_TIPO lista_definiciones_tipo TK_FTIPO

   16 definicion_const: TK_CONST lista_definiciones_const TK_FCONST

   17 definicion_var: TK_VAR lista_definiciones_var TK_FVAR

   18 lista_definiciones_tipo: TK_IDENTIFICADOR TK_IGUAL def_tipo TK_COMPOSICION_SECUENCIAL lista_definiciones_tipo
   19                        | %empty

   20 def_tipo: TK_TUPLA lista_campos TK_FTUPLA
   21         | TK_TABLA TK_INICIO_ARRAY expresion_tabla TK_SUBRANGO expresion_tabla TK_FIN_ARRAY TK_DE def_tipo
   22         | TK_IDENTIFICADOR
   23         | expresion_tabla TK_SUBRANGO expresion_tabla
   24         | TK_REF def_tipo
   25         | tipo_base

   26 tipo_base: TK_ENTERO
   27          | TK_BOOLEANO
   28          | TK_CARACTER
   29          | TK_REAL
   30          | TK_CADENA

   31 expresion_tabla: TK_LITERAL_ENTERO
   32                | TK_LITERAL_CARACTER

   33 lista_campos: TK_IDENTIFICADOR TK_DEF_TIPO def_tipo TK_COMPOSICION_SECUENCIAL lista_campos
   34             | %empty

   35 lista_definiciones_const: TK_IDENTIFICADOR TK_IGUAL tipo_literal TK_COMPOSICION_SECUENCIAL lista_definiciones_const
   36                         | %empty

   37 tipo_literal: TK_LITERAL_CADENA
   38             | TK_LITERAL_CARACTER
   39             | TK_LITERAL_ENTERO
   40             | TK_LITERAL_REAL
   41             | TK_LITERAL_BOOLEANO

   42 lista_definiciones_var: lista_id TK_COMPOSICION_SECUENCIAL lista_definiciones_var
   43                       | %empty

   44 lista_id: TK_IDENTIFICADOR TK_SEPARADOR lista_id
   45         | TK_IDENTIFICADOR TK_DEF_TIPO def_tipo

   46 definiciones_variables_interaccion: definicion_entrada
   47                                   | definicion_entrada definicion_salida
   48                                   | definicion_salida

   49 definicion_entrada: TK_ENT lista_definiciones_var

   50 definicion_salida: TK_SAL lista_definiciones_var

   51 expresion: expresion_aritmetica
   52          | expresion_booleana
   53          | llamada_funcion

   54 expresion_aritmetica: expresion_aritmetica TK_SUMA expresion_aritmetica
   55                     | expresion_aritmetica TK_RESTA expresion_aritmetica
   56                     | expresion_aritmetica TK_DIVISION expresion_aritmetica
   57                     | expresion_aritmetica TK_DIV expresion_aritmetica
   58                     | expresion_aritmetica TK_MOD expresion_aritmetica
   59                     | expresion_aritmetica TK_MULTIPLICACION expresion_aritmetica
   60                     | TK_INICIO_PARENTESIS expresion_aritmetica TK_FIN_PARENTESIS
   61                     | operando
   62                     | TK_RESTA expresion_aritmetica
   63                     | TK_LITERAL_ENTERO
   64                     | TK_LITERAL_REAL

   65 expresion_booleana: expresion_booleana TK_Y M expresion_booleana
   66                   | expresion_booleana TK_O M expresion_booleana
   67                   | TK_NO expresion_booleana
   68                   | TK_LITERAL_BOOLEANO
   69                   | expresion_aritmetica TK_OPERADOR_RELACIONAL expresion_aritmetica
   70                   | expresion_aritmetica TK_IGUAL expresion_aritmetica
   71                   | TK_INICIO_PARENTESIS expresion_booleana TK_FIN_PARENTESIS

   72 operando: TK_IDENTIFICADOR
   73         | operando TK_REFERENCIA operando
   74         | operando TK_INICIO_ARRAY expresion TK_FIN_ARRAY
   75         | operando TK_REF

   76 M: %empty

   77 N: %empty

   78 instrucciones: instruccion TK_COMPOSICION_SECUENCIAL M instrucciones
   79              | instruccion

   80 instruccion: TK_CONTINUAR
   81            | asignacion
   82            | alternativa
   83            | iteracion
   84            | llamada_accion

   85 asignacion: operando TK_ASIGNACION expresion

   86 alternativa: TK_SI expresion TK_ENTONCES M instrucciones N lista_opciones TK_FSI

   87 lista_opciones: TK_SI_NO_SI expresion TK_ENTONCES M instrucciones N lista_opciones
   88               | %empty

   89 iteracion: it_cota_fija
   90          | it_cota_variable

   91 it_cota_variable: TK_MIENTRAS M expresion_booleana TK_HACER N instrucciones TK_FMIENTRAS

   92 it_cota_fija: TK_PARA TK_IDENTIFICADOR TK_ASIGNACION expresion TK_HASTA expresion TK_HACER instrucciones TK_FPARA

   93 definicion_accion: TK_ACCION cabecera_accion bloque TK_FACCION

   94 definicion_funcion: TK_FUNCION cabecera_funcion bloque TK_DEV expresion TK_FFUNCION

   95 cabecera_accion: TK_IDENTIFICADOR TK_INICIO_PARENTESIS defParForm TK_FIN_PARENTESIS TK_COMPOSICION_SECUENCIAL

   96 cabecera_funcion: TK_IDENTIFICADOR TK_INICIO_PARENTESIS lista_definiciones_var TK_FIN_PARENTESIS TK_DEV definicion_tipo TK_COMPOSICION_SECUENCIAL

   97 defParForm: dParForm TK_COMPOSICION_SECUENCIAL defParForm
   98           | %empty

   99 dParForm: TK_ENT lista_id TK_DEF_TIPO def_tipo
  100         | TK_SAL lista_id TK_DEF_TIPO def_tipo
  101         | TK_ENT_SAL lista_id TK_DEF_TIPO def_tipo

  102 llamada_funcion: TK_IDENTIFICADOR TK_INICIO_PARENTESIS parametros_reales TK_FIN_PARENTESIS

  103 llamada_accion: TK_IDENTIFICADOR TK_INICIO_PARENTESIS parametros_reales TK_FIN_PARENTESIS

  104 parametros_reales: expresion TK_SEPARADOR parametros_reales
  105                  | expresion
  106                  | %empty


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TK_LITERAL_CADENA <literales_type> (258) 37
    TK_LITERAL_CARACTER <literales_type> (259) 32 38
    TK_LITERAL_ENTERO <literales_type> (260) 31 39 63
    TK_LITERAL_REAL <literales_type> (261) 40 64
    TK_LITERAL_BOOLEANO <literales_type> (262) 41 68
    TK_IDENTIFICADOR <ctype> (263) 1 18 22 33 35 44 45 72 92 95 96 102 103
    TK_ACCION (264) 93
    TK_ALGORITMO (265) 1
    TK_BOOLEANO <itype> (266) 27
    TK_CADENA (267) 30
    TK_CARACTER (268) 28
    TK_CONST (269) 16
    TK_CONTINUAR (270) 80
    TK_DE (271) 21
    TK_DEV (272) 94 96
    TK_ENT (273) 49 99
    TK_ENTERO (274) 26
    TK_ENT_SAL (275) 101
    TK_FACCION (276) 93
    TK_FALGORITMO (277) 1
    TK_FALSO <btype> (278)
    TK_FCONST (279) 16
    TK_FFUNCION (280) 94
    TK_FMIENTRAS (281) 91
    TK_FPARA (282) 92
    TK_FSI (283) 86
    TK_FTIPO (284) 15
    TK_FTUPLA (285) 20
    TK_FUNCION (286) 94
    TK_FVAR (287) 17
    TK_HACER (288) 91 92
    TK_HASTA (289) 92
    TK_MIENTRAS (290) 91
    TK_PARA (291) 92
    TK_REAL (292) 29
    TK_SAL (293) 50 100
    TK_SI (294) 86
    TK_TABLA (295) 21
    TK_TIPO (296) 15
    TK_TUPLA (297) 20
    TK_VAR (298) 17
    TK_VERDADERO <btype> (299)
    TK_REF (300) 24 75
    TK_COMENTARIO (301) 2 3
    TK_ASIGNACION (302) 85 92
    TK_COMPOSICION_SECUENCIAL (303) 1 18 33 35 42 78 95 96 97
    TK_SEPARADOR (304) 44 104
    TK_SUBRANGO (305) 21 23
    TK_DEF_TIPO (306) 33 45 99 100 101
    TK_ENTONCES (307) 86 87
    TK_SI_NO_SI (308) 87
    TK_FIN_ARRAY (309) 21 74
    TK_INICIO_PARENTESIS (310) 60 71 95 96 102 103
    TK_FIN_PARENTESIS (311) 60 71 95 96 102 103
    TK_OPERADOR_RELACIONAL <ctype> (312) 69
    TK_REFERENCIA (313) 73
    TK_INICIO_ARRAY (314) 21 74
    TK_O (315) 66
    TK_Y (316) 65
    TK_NO (317) 67
    TK_IGUAL (318) 18 35 70
    TK_SUMA (319) 54
    TK_RESTA (320) 55 62
    TK_MOD (321) 58
    TK_DIV (322) 57
    TK_MULTIPLICACION (323) 59
    TK_DIVISION (324) 56
    UMINUS (325)


Nonterminals, with rules where they appear

    $accept (71)
        on left: 0
    descripcion_algoritmo (72)
        on left: 1
        on right: 0
    cabecera_algoritmo (73)
        on left: 2
        on right: 1
    bloque_algoritmo (74)
        on left: 3
        on right: 1
    definiciones_globales (75)
        on left: 4 5 6
        on right: 2 4 5
    definiciones_acciones_funciones (76)
        on left: 7 8 9
        on right: 2 7 8
    bloque (77)
        on left: 10
        on right: 3 93 94
    declaraciones (78)
        on left: 11 12 13 14
        on right: 10 11 12 13
    definicion_tipo (79)
        on left: 15
        on right: 4 11 96
    definicion_const (80)
        on left: 16
        on right: 5 12
    definicion_var (81)
        on left: 17
        on right: 13
    lista_definiciones_tipo (82)
        on left: 18 19
        on right: 15 18
    def_tipo <itype> (83)
        on left: 20 21 22 23 24 25
        on right: 18 21 24 33 45 99 100 101
    tipo_base <celda> (84)
        on left: 26 27 28 29 30
        on right: 25
    expresion_tabla (85)
        on left: 31 32
        on right: 21 23
    lista_campos (86)
        on left: 33 34
        on right: 20 33
    lista_definiciones_const (87)
        on left: 35 36
        on right: 16 35
    tipo_literal <literales_type> (88)
        on left: 37 38 39 40 41
        on right: 35
    lista_definiciones_var (89)
        on left: 42 43
        on right: 17 42 49 50 96
    lista_id <itype> (90)
        on left: 44 45
        on right: 42 44 99 100 101
    definiciones_variables_interaccion (91)
        on left: 46 47 48
        on right: 2
    definicion_entrada (92)
        on left: 49
        on right: 46 47
    definicion_salida (93)
        on left: 50
        on right: 47 48
    expresion <exp_type> (94)
        on left: 51 52 53
        on right: 74 85 86 87 92 94 104 105
    expresion_aritmetica <exp_type> (95)
        on left: 54 55 56 57 58 59 60 61 62 63 64
        on right: 51 54 55 56 57 58 59 60 62 69 70
    expresion_booleana <exp_type> (96)
        on left: 65 66 67 68 69 70 71
        on right: 52 65 66 67 71 91
    operando <exp_type> (97)
        on left: 72 73 74 75
        on right: 61 73 74 75 85
    M <itype> (98)
        on left: 76
        on right: 65 66 78 86 87 91
    N <itype> (99)
        on left: 77
        on right: 86 87 91
    instrucciones <inst_type> (100)
        on left: 78 79
        on right: 10 78 86 87 91 92
    instruccion <inst_type> (101)
        on left: 80 81 82 83 84
        on right: 78 79
    asignacion <inst_type> (102)
        on left: 85
        on right: 81
    alternativa <inst_type> (103)
        on left: 86
        on right: 82
    lista_opciones <inst_type> (104)
        on left: 87 88
        on right: 86 87
    iteracion <inst_type> (105)
        on left: 89 90
        on right: 83
    it_cota_variable <inst_type> (106)
        on left: 91
        on right: 90
    it_cota_fija <inst_type> (107)
        on left: 92
        on right: 89
    definicion_accion (108)
        on left: 93
        on right: 7
    definicion_funcion (109)
        on left: 94
        on right: 8
    cabecera_accion (110)
        on left: 95
        on right: 93
    cabecera_funcion (111)
        on left: 96
        on right: 94
    defParForm (112)
        on left: 97 98
        on right: 95 97
    dParForm (113)
        on left: 99 100 101
        on right: 97
    llamada_funcion (114)
        on left: 102
        on right: 53
    llamada_accion (115)
        on left: 103
        on right: 84
    parametros_reales (116)
        on left: 104 105 106
        on right: 102 103 104


State 0

    0 $accept: . descripcion_algoritmo $end

    TK_ALGORITMO  shift, and go to state 1

    descripcion_algoritmo  go to state 2


State 1

    1 descripcion_algoritmo: TK_ALGORITMO . TK_IDENTIFICADOR TK_COMPOSICION_SECUENCIAL cabecera_algoritmo bloque_algoritmo TK_FALGORITMO

    TK_IDENTIFICADOR  shift, and go to state 3


State 2

    0 $accept: descripcion_algoritmo . $end

    $end  shift, and go to state 4


State 3

    1 descripcion_algoritmo: TK_ALGORITMO TK_IDENTIFICADOR . TK_COMPOSICION_SECUENCIAL cabecera_algoritmo bloque_algoritmo TK_FALGORITMO

    TK_COMPOSICION_SECUENCIAL  shift, and go to state 5


State 4

    0 $accept: descripcion_algoritmo $end .

    $default  accept


State 5

    1 descripcion_algoritmo: TK_ALGORITMO TK_IDENTIFICADOR TK_COMPOSICION_SECUENCIAL . cabecera_algoritmo bloque_algoritmo TK_FALGORITMO

    TK_CONST  shift, and go to state 6
    TK_TIPO   shift, and go to state 7

    $default  reduce using rule 6 (definiciones_globales)

    cabecera_algoritmo     go to state 8
    definiciones_globales  go to state 9
    definicion_tipo        go to state 10
    definicion_const       go to state 11


State 6

   16 definicion_const: TK_CONST . lista_definiciones_const TK_FCONST

    TK_IDENTIFICADOR  shift, and go to state 12

    $default  reduce using rule 36 (lista_definiciones_const)

    lista_definiciones_const  go to state 13


State 7

   15 definicion_tipo: TK_TIPO . lista_definiciones_tipo TK_FTIPO

    TK_IDENTIFICADOR  shift, and go to state 14

    $default  reduce using rule 19 (lista_definiciones_tipo)

    lista_definiciones_tipo  go to state 15


State 8

    1 descripcion_algoritmo: TK_ALGORITMO TK_IDENTIFICADOR TK_COMPOSICION_SECUENCIAL cabecera_algoritmo . bloque_algoritmo TK_FALGORITMO

    TK_CONST  shift, and go to state 6
    TK_TIPO   shift, and go to state 7
    TK_VAR    shift, and go to state 16

    $default  reduce using rule 14 (declaraciones)

    bloque_algoritmo  go to state 17
    bloque            go to state 18
    declaraciones     go to state 19
    definicion_tipo   go to state 20
    definicion_const  go to state 21
    definicion_var    go to state 22


State 9

    2 cabecera_algoritmo: definiciones_globales . definiciones_acciones_funciones definiciones_variables_interaccion TK_COMENTARIO

    TK_ACCION   shift, and go to state 23
    TK_FUNCION  shift, and go to state 24

    $default  reduce using rule 9 (definiciones_acciones_funciones)

    definiciones_acciones_funciones  go to state 25
    definicion_accion                go to state 26
    definicion_funcion               go to state 27


State 10

    4 definiciones_globales: definicion_tipo . definiciones_globales

    TK_CONST  shift, and go to state 6
    TK_TIPO   shift, and go to state 7

    $default  reduce using rule 6 (definiciones_globales)

    definiciones_globales  go to state 28
    definicion_tipo        go to state 10
    definicion_const       go to state 11


State 11

    5 definiciones_globales: definicion_const . definiciones_globales

    TK_CONST  shift, and go to state 6
    TK_TIPO   shift, and go to state 7

    $default  reduce using rule 6 (definiciones_globales)

    definiciones_globales  go to state 29
    definicion_tipo        go to state 10
    definicion_const       go to state 11


State 12

   35 lista_definiciones_const: TK_IDENTIFICADOR . TK_IGUAL tipo_literal TK_COMPOSICION_SECUENCIAL lista_definiciones_const

    TK_IGUAL  shift, and go to state 30


State 13

   16 definicion_const: TK_CONST lista_definiciones_const . TK_FCONST

    TK_FCONST  shift, and go to state 31


State 14

   18 lista_definiciones_tipo: TK_IDENTIFICADOR . TK_IGUAL def_tipo TK_COMPOSICION_SECUENCIAL lista_definiciones_tipo

    TK_IGUAL  shift, and go to state 32


State 15

   15 definicion_tipo: TK_TIPO lista_definiciones_tipo . TK_FTIPO

    TK_FTIPO  shift, and go to state 33


State 16

   17 definicion_var: TK_VAR . lista_definiciones_var TK_FVAR

    TK_IDENTIFICADOR  shift, and go to state 34

    $default  reduce using rule 43 (lista_definiciones_var)

    lista_definiciones_var  go to state 35
    lista_id                go to state 36


State 17

    1 descripcion_algoritmo: TK_ALGORITMO TK_IDENTIFICADOR TK_COMPOSICION_SECUENCIAL cabecera_algoritmo bloque_algoritmo . TK_FALGORITMO

    TK_FALGORITMO  shift, and go to state 37


State 18

    3 bloque_algoritmo: bloque . TK_COMENTARIO

    TK_COMENTARIO  shift, and go to state 38


State 19

   10 bloque: declaraciones . instrucciones

    TK_IDENTIFICADOR  shift, and go to state 39
    TK_CONTINUAR      shift, and go to state 40
    TK_MIENTRAS       shift, and go to state 41
    TK_PARA           shift, and go to state 42
    TK_SI             shift, and go to state 43

    operando          go to state 44
    instrucciones     go to state 45
    instruccion       go to state 46
    asignacion        go to state 47
    alternativa       go to state 48
    iteracion         go to state 49
    it_cota_variable  go to state 50
    it_cota_fija      go to state 51
    llamada_accion    go to state 52


State 20

   11 declaraciones: definicion_tipo . declaraciones

    TK_CONST  shift, and go to state 6
    TK_TIPO   shift, and go to state 7
    TK_VAR    shift, and go to state 16

    $default  reduce using rule 14 (declaraciones)

    declaraciones     go to state 53
    definicion_tipo   go to state 20
    definicion_const  go to state 21
    definicion_var    go to state 22


State 21

   12 declaraciones: definicion_const . declaraciones

    TK_CONST  shift, and go to state 6
    TK_TIPO   shift, and go to state 7
    TK_VAR    shift, and go to state 16

    $default  reduce using rule 14 (declaraciones)

    declaraciones     go to state 54
    definicion_tipo   go to state 20
    definicion_const  go to state 21
    definicion_var    go to state 22


State 22

   13 declaraciones: definicion_var . declaraciones

    TK_CONST  shift, and go to state 6
    TK_TIPO   shift, and go to state 7
    TK_VAR    shift, and go to state 16

    $default  reduce using rule 14 (declaraciones)

    declaraciones     go to state 55
    definicion_tipo   go to state 20
    definicion_const  go to state 21
    definicion_var    go to state 22


State 23

   93 definicion_accion: TK_ACCION . cabecera_accion bloque TK_FACCION

    TK_IDENTIFICADOR  shift, and go to state 56

    cabecera_accion  go to state 57


State 24

   94 definicion_funcion: TK_FUNCION . cabecera_funcion bloque TK_DEV expresion TK_FFUNCION

    TK_IDENTIFICADOR  shift, and go to state 58

    cabecera_funcion  go to state 59


State 25

    2 cabecera_algoritmo: definiciones_globales definiciones_acciones_funciones . definiciones_variables_interaccion TK_COMENTARIO

    TK_ENT  shift, and go to state 60
    TK_SAL  shift, and go to state 61

    definiciones_variables_interaccion  go to state 62
    definicion_entrada                  go to state 63
    definicion_salida                   go to state 64


State 26

    7 definiciones_acciones_funciones: definicion_accion . definiciones_acciones_funciones

    TK_ACCION   shift, and go to state 23
    TK_FUNCION  shift, and go to state 24

    $default  reduce using rule 9 (definiciones_acciones_funciones)

    definiciones_acciones_funciones  go to state 65
    definicion_accion                go to state 26
    definicion_funcion               go to state 27


State 27

    8 definiciones_acciones_funciones: definicion_funcion . definiciones_acciones_funciones

    TK_ACCION   shift, and go to state 23
    TK_FUNCION  shift, and go to state 24

    $default  reduce using rule 9 (definiciones_acciones_funciones)

    definiciones_acciones_funciones  go to state 66
    definicion_accion                go to state 26
    definicion_funcion               go to state 27


State 28

    4 definiciones_globales: definicion_tipo definiciones_globales .

    $default  reduce using rule 4 (definiciones_globales)


State 29

    5 definiciones_globales: definicion_const definiciones_globales .

    $default  reduce using rule 5 (definiciones_globales)


State 30

   35 lista_definiciones_const: TK_IDENTIFICADOR TK_IGUAL . tipo_literal TK_COMPOSICION_SECUENCIAL lista_definiciones_const

    TK_LITERAL_CADENA    shift, and go to state 67
    TK_LITERAL_CARACTER  shift, and go to state 68
    TK_LITERAL_ENTERO    shift, and go to state 69
    TK_LITERAL_REAL      shift, and go to state 70
    TK_LITERAL_BOOLEANO  shift, and go to state 71

    tipo_literal  go to state 72


State 31

   16 definicion_const: TK_CONST lista_definiciones_const TK_FCONST .

    $default  reduce using rule 16 (definicion_const)


State 32

   18 lista_definiciones_tipo: TK_IDENTIFICADOR TK_IGUAL . def_tipo TK_COMPOSICION_SECUENCIAL lista_definiciones_tipo

    TK_LITERAL_CARACTER  shift, and go to state 73
    TK_LITERAL_ENTERO    shift, and go to state 74
    TK_IDENTIFICADOR     shift, and go to state 75
    TK_BOOLEANO          shift, and go to state 76
    TK_CADENA            shift, and go to state 77
    TK_CARACTER          shift, and go to state 78
    TK_ENTERO            shift, and go to state 79
    TK_REAL              shift, and go to state 80
    TK_TABLA             shift, and go to state 81
    TK_TUPLA             shift, and go to state 82
    TK_REF               shift, and go to state 83

    def_tipo         go to state 84
    tipo_base        go to state 85
    expresion_tabla  go to state 86


State 33

   15 definicion_tipo: TK_TIPO lista_definiciones_tipo TK_FTIPO .

    $default  reduce using rule 15 (definicion_tipo)


State 34

   44 lista_id: TK_IDENTIFICADOR . TK_SEPARADOR lista_id
   45         | TK_IDENTIFICADOR . TK_DEF_TIPO def_tipo

    TK_SEPARADOR  shift, and go to state 87
    TK_DEF_TIPO   shift, and go to state 88


State 35

   17 definicion_var: TK_VAR lista_definiciones_var . TK_FVAR

    TK_FVAR  shift, and go to state 89


State 36

   42 lista_definiciones_var: lista_id . TK_COMPOSICION_SECUENCIAL lista_definiciones_var

    TK_COMPOSICION_SECUENCIAL  shift, and go to state 90


State 37

    1 descripcion_algoritmo: TK_ALGORITMO TK_IDENTIFICADOR TK_COMPOSICION_SECUENCIAL cabecera_algoritmo bloque_algoritmo TK_FALGORITMO .

    $default  reduce using rule 1 (descripcion_algoritmo)


State 38

    3 bloque_algoritmo: bloque TK_COMENTARIO .

    $default  reduce using rule 3 (bloque_algoritmo)


State 39

   72 operando: TK_IDENTIFICADOR .
  103 llamada_accion: TK_IDENTIFICADOR . TK_INICIO_PARENTESIS parametros_reales TK_FIN_PARENTESIS

    TK_INICIO_PARENTESIS  shift, and go to state 91

    $default  reduce using rule 72 (operando)


State 40

   80 instruccion: TK_CONTINUAR .

    $default  reduce using rule 80 (instruccion)


State 41

   91 it_cota_variable: TK_MIENTRAS . M expresion_booleana TK_HACER N instrucciones TK_FMIENTRAS

    $default  reduce using rule 76 (M)

    M  go to state 92


State 42

   92 it_cota_fija: TK_PARA . TK_IDENTIFICADOR TK_ASIGNACION expresion TK_HASTA expresion TK_HACER instrucciones TK_FPARA

    TK_IDENTIFICADOR  shift, and go to state 93


State 43

   86 alternativa: TK_SI . expresion TK_ENTONCES M instrucciones N lista_opciones TK_FSI

    TK_LITERAL_ENTERO     shift, and go to state 94
    TK_LITERAL_REAL       shift, and go to state 95
    TK_LITERAL_BOOLEANO   shift, and go to state 96
    TK_IDENTIFICADOR      shift, and go to state 97
    TK_INICIO_PARENTESIS  shift, and go to state 98
    TK_NO                 shift, and go to state 99
    TK_RESTA              shift, and go to state 100

    expresion             go to state 101
    expresion_aritmetica  go to state 102
    expresion_booleana    go to state 103
    operando              go to state 104
    llamada_funcion       go to state 105


State 44

   73 operando: operando . TK_REFERENCIA operando
   74         | operando . TK_INICIO_ARRAY expresion TK_FIN_ARRAY
   75         | operando . TK_REF
   85 asignacion: operando . TK_ASIGNACION expresion

    TK_REF           shift, and go to state 106
    TK_ASIGNACION    shift, and go to state 107
    TK_REFERENCIA    shift, and go to state 108
    TK_INICIO_ARRAY  shift, and go to state 109


State 45

   10 bloque: declaraciones instrucciones .

    $default  reduce using rule 10 (bloque)


State 46

   78 instrucciones: instruccion . TK_COMPOSICION_SECUENCIAL M instrucciones
   79              | instruccion .

    TK_COMPOSICION_SECUENCIAL  shift, and go to state 110

    $default  reduce using rule 79 (instrucciones)


State 47

   81 instruccion: asignacion .

    $default  reduce using rule 81 (instruccion)


State 48

   82 instruccion: alternativa .

    $default  reduce using rule 82 (instruccion)


State 49

   83 instruccion: iteracion .

    $default  reduce using rule 83 (instruccion)


State 50

   90 iteracion: it_cota_variable .

    $default  reduce using rule 90 (iteracion)


State 51

   89 iteracion: it_cota_fija .

    $default  reduce using rule 89 (iteracion)


State 52

   84 instruccion: llamada_accion .

    $default  reduce using rule 84 (instruccion)


State 53

   11 declaraciones: definicion_tipo declaraciones .

    $default  reduce using rule 11 (declaraciones)


State 54

   12 declaraciones: definicion_const declaraciones .

    $default  reduce using rule 12 (declaraciones)


State 55

   13 declaraciones: definicion_var declaraciones .

    $default  reduce using rule 13 (declaraciones)


State 56

   95 cabecera_accion: TK_IDENTIFICADOR . TK_INICIO_PARENTESIS defParForm TK_FIN_PARENTESIS TK_COMPOSICION_SECUENCIAL

    TK_INICIO_PARENTESIS  shift, and go to state 111


State 57

   93 definicion_accion: TK_ACCION cabecera_accion . bloque TK_FACCION

    TK_CONST  shift, and go to state 6
    TK_TIPO   shift, and go to state 7
    TK_VAR    shift, and go to state 16

    $default  reduce using rule 14 (declaraciones)

    bloque            go to state 112
    declaraciones     go to state 19
    definicion_tipo   go to state 20
    definicion_const  go to state 21
    definicion_var    go to state 22


State 58

   96 cabecera_funcion: TK_IDENTIFICADOR . TK_INICIO_PARENTESIS lista_definiciones_var TK_FIN_PARENTESIS TK_DEV definicion_tipo TK_COMPOSICION_SECUENCIAL

    TK_INICIO_PARENTESIS  shift, and go to state 113


State 59

   94 definicion_funcion: TK_FUNCION cabecera_funcion . bloque TK_DEV expresion TK_FFUNCION

    TK_CONST  shift, and go to state 6
    TK_TIPO   shift, and go to state 7
    TK_VAR    shift, and go to state 16

    $default  reduce using rule 14 (declaraciones)

    bloque            go to state 114
    declaraciones     go to state 19
    definicion_tipo   go to state 20
    definicion_const  go to state 21
    definicion_var    go to state 22


State 60

   49 definicion_entrada: TK_ENT . lista_definiciones_var

    TK_IDENTIFICADOR  shift, and go to state 34

    $default  reduce using rule 43 (lista_definiciones_var)

    lista_definiciones_var  go to state 115
    lista_id                go to state 36


State 61

   50 definicion_salida: TK_SAL . lista_definiciones_var

    TK_IDENTIFICADOR  shift, and go to state 34

    $default  reduce using rule 43 (lista_definiciones_var)

    lista_definiciones_var  go to state 116
    lista_id                go to state 36


State 62

    2 cabecera_algoritmo: definiciones_globales definiciones_acciones_funciones definiciones_variables_interaccion . TK_COMENTARIO

    TK_COMENTARIO  shift, and go to state 117


State 63

   46 definiciones_variables_interaccion: definicion_entrada .
   47                                   | definicion_entrada . definicion_salida

    TK_SAL  shift, and go to state 61

    $default  reduce using rule 46 (definiciones_variables_interaccion)

    definicion_salida  go to state 118


State 64

   48 definiciones_variables_interaccion: definicion_salida .

    $default  reduce using rule 48 (definiciones_variables_interaccion)


State 65

    7 definiciones_acciones_funciones: definicion_accion definiciones_acciones_funciones .

    $default  reduce using rule 7 (definiciones_acciones_funciones)


State 66

    8 definiciones_acciones_funciones: definicion_funcion definiciones_acciones_funciones .

    $default  reduce using rule 8 (definiciones_acciones_funciones)


State 67

   37 tipo_literal: TK_LITERAL_CADENA .

    $default  reduce using rule 37 (tipo_literal)


State 68

   38 tipo_literal: TK_LITERAL_CARACTER .

    $default  reduce using rule 38 (tipo_literal)


State 69

   39 tipo_literal: TK_LITERAL_ENTERO .

    $default  reduce using rule 39 (tipo_literal)


State 70

   40 tipo_literal: TK_LITERAL_REAL .

    $default  reduce using rule 40 (tipo_literal)


State 71

   41 tipo_literal: TK_LITERAL_BOOLEANO .

    $default  reduce using rule 41 (tipo_literal)


State 72

   35 lista_definiciones_const: TK_IDENTIFICADOR TK_IGUAL tipo_literal . TK_COMPOSICION_SECUENCIAL lista_definiciones_const

    TK_COMPOSICION_SECUENCIAL  shift, and go to state 119


State 73

   32 expresion_tabla: TK_LITERAL_CARACTER .

    $default  reduce using rule 32 (expresion_tabla)


State 74

   31 expresion_tabla: TK_LITERAL_ENTERO .

    $default  reduce using rule 31 (expresion_tabla)


State 75

   22 def_tipo: TK_IDENTIFICADOR .

    $default  reduce using rule 22 (def_tipo)


State 76

   27 tipo_base: TK_BOOLEANO .

    $default  reduce using rule 27 (tipo_base)


State 77

   30 tipo_base: TK_CADENA .

    $default  reduce using rule 30 (tipo_base)


State 78

   28 tipo_base: TK_CARACTER .

    $default  reduce using rule 28 (tipo_base)


State 79

   26 tipo_base: TK_ENTERO .

    $default  reduce using rule 26 (tipo_base)


State 80

   29 tipo_base: TK_REAL .

    $default  reduce using rule 29 (tipo_base)


State 81

   21 def_tipo: TK_TABLA . TK_INICIO_ARRAY expresion_tabla TK_SUBRANGO expresion_tabla TK_FIN_ARRAY TK_DE def_tipo

    TK_INICIO_ARRAY  shift, and go to state 120


State 82

   20 def_tipo: TK_TUPLA . lista_campos TK_FTUPLA

    TK_IDENTIFICADOR  shift, and go to state 121

    $default  reduce using rule 34 (lista_campos)

    lista_campos  go to state 122


State 83

   24 def_tipo: TK_REF . def_tipo

    TK_LITERAL_CARACTER  shift, and go to state 73
    TK_LITERAL_ENTERO    shift, and go to state 74
    TK_IDENTIFICADOR     shift, and go to state 75
    TK_BOOLEANO          shift, and go to state 76
    TK_CADENA            shift, and go to state 77
    TK_CARACTER          shift, and go to state 78
    TK_ENTERO            shift, and go to state 79
    TK_REAL              shift, and go to state 80
    TK_TABLA             shift, and go to state 81
    TK_TUPLA             shift, and go to state 82
    TK_REF               shift, and go to state 83

    def_tipo         go to state 123
    tipo_base        go to state 85
    expresion_tabla  go to state 86


State 84

   18 lista_definiciones_tipo: TK_IDENTIFICADOR TK_IGUAL def_tipo . TK_COMPOSICION_SECUENCIAL lista_definiciones_tipo

    TK_COMPOSICION_SECUENCIAL  shift, and go to state 124


State 85

   25 def_tipo: tipo_base .

    $default  reduce using rule 25 (def_tipo)


State 86

   23 def_tipo: expresion_tabla . TK_SUBRANGO expresion_tabla

    TK_SUBRANGO  shift, and go to state 125


State 87

   44 lista_id: TK_IDENTIFICADOR TK_SEPARADOR . lista_id

    TK_IDENTIFICADOR  shift, and go to state 34

    lista_id  go to state 126


State 88

   45 lista_id: TK_IDENTIFICADOR TK_DEF_TIPO . def_tipo

    TK_LITERAL_CARACTER  shift, and go to state 73
    TK_LITERAL_ENTERO    shift, and go to state 74
    TK_IDENTIFICADOR     shift, and go to state 75
    TK_BOOLEANO          shift, and go to state 76
    TK_CADENA            shift, and go to state 77
    TK_CARACTER          shift, and go to state 78
    TK_ENTERO            shift, and go to state 79
    TK_REAL              shift, and go to state 80
    TK_TABLA             shift, and go to state 81
    TK_TUPLA             shift, and go to state 82
    TK_REF               shift, and go to state 83
